cabal-version: 2.4
name:          chart-svg-graphviz
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/chart-svg-graphviz#readme
bug-reports: https://github.com/tonyday567/chart-svg-graphviz/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/chart-svg-graphviz

library
  hs-source-dirs:
    src
  default-extensions:
    NoImplicitPrelude
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
    base >=4.7 && <5,
    chart-svg >= 0.2 && < 0.3,
    containers,
    fgl,
    graphviz >= 2999.20.1.0 && < 3000,
    lens,
    numhask >= 0.7 && < 0.8,
    numhask-space >= 0.6 && < 0.7,
  exposed-modules:
    Chart.GraphViz
  other-modules:
  default-language: Haskell2010

executable chart-svg-graphviz
  main-is: chart-svg-graphviz.hs
  hs-source-dirs: app
  build-depends:
    base >= 4.7 && < 5,
    numhask >= 0.7 && < 0.8,
    chart-svg-graphviz
  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
    test
  build-depends:
    base >=4.7 && <5,
    doctest,
    numhask >= 0.7 && < 0.8,
    chart-svg-graphviz
  default-language: Haskell2010
  default-extensions:
    NoImplicitPrelude
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
