cabal-version: 2.4
name:          chart-svg-graphviz
version:       0.0.1
synopsis:      See readme.md
description:   See readme.md for description.
category:      project
author:        Tony Day
maintainer:    tonyday567@gmail.com
copyright:     Tony Day (c) AfterTimes
license:       BSD-3-Clause
homepage:      https://github.com/tonyday567/chart-svg-graphviz#readme
bug-reports:   https://github.com/tonyday567/chart-svg-graphviz/issues
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/tonyday567/chart-svg-graphviz

library
  hs-source-dirs:     src
  default-extensions:
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fwrite-ide-info
    -hiedir=.hie

  build-depends:
    , base           >=4.7         && <5
    , chart-svg      ^>=0.3
    , containers     ^>=0.6
    , fgl            ^>=5.7
    , graphviz       >=2999.20.1.0 && <3000
    , numhask        ^>=0.10
    , numhask-space  ^>=0.10
    , optics-core
    , text           ^>=1.2
    , flatparse
    , bytestring
    , template-haskell
    , neat-interpolation
    , these
    , algebraic-graphs
    , process-extras

  exposed-modules:
    Chart.GraphViz
    Chart.NumHask
    Dot
    Dot.TH

  other-modules:
  default-language:   Haskell2010
