cabal-version: 2.4
name:          dotparse
version:       0.0.1
synopsis:      dot language parsing and printing.
description:   A dot language parser and printer.
category:      project
author:        Tony Day
maintainer:    tonyday567@gmail.com
copyright:     Tony Day (c) 2022
license:       BSD-3-Clause
homepage:      https://github.com/tonyday567/dotparser#readme
bug-reports:   https://github.com/tonyday567/dotparser/issues
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/tonyday567/dotparser

library
  hs-source-dirs:     src
  default-extensions:
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fwrite-ide-info
    -hiedir=.hie

  build-depends:
    , base           >=4.7         && <5
    , chart-svg      ^>=0.3
    , containers     ^>=0.6
    , numhask        ^>=0.10
    , numhask-space  ^>=0.10
    , optics-core
    , text           ^>=1.2
    , flatparse
    , bytestring
    , template-haskell
    , neat-interpolation
    , these
    , algebraic-graphs
    , process-extras

  exposed-modules:
    DotParse
    DotParse.FlatParse
    DotParse.FlatParse.TH
    DotParse.Examples
    DotParse.Examples.NumHask

  other-modules:
  default-language:   Haskell2010
