cabal-version: 3.0
name: dotparse
version: 0.1.4.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2020
category: graphics
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/dotparse#readme
bug-reports: https://github.com/tonyday567/dotparse/issues
synopsis: dot language parsing and printing.
description:
  This package provides parsing and printing of the dot language.

  == Usage

  >>> :set -XOverloadedLabels
  >>> :set -XOverloadedStrings
  >>> import DotParse
  >>> import Chart
  >>> import Data.Text (pack)
  >>> import DotParse.Examples (exInt)
  >>> ex <- processGraph exInt
  >>> writeChartOptions "other/exga.svg" (graphToChart ex)

  ![usage example](docs/other/exga.svg)

build-type: Simple
tested-with:
  ghc ==9.6.7
  ghc ==9.8.4
  ghc ==9.10.3
  ghc ==9.12.3

extra-doc-files:
  ChangeLog.md
  other/*.svg
  readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/dotparse

common ghc-options-stanza
common ghc2024-additions
  default-extensions:
    DataKinds
    DerivingStrategies
    DisambiguateRecordFields
    ExplicitNamespaces
    GADTs
    LambdaCase
    MonoLocalBinds
    RoleAnnotations

common ghc2024-stanza
  if impl(ghc >=9.10)
    default-language:
      GHC2024
  else
    import: ghc2024-additions
    default-language:
      GHC2021

library
  default-language: GHC2024
  default-extensions: QuasiQuotes
  hs-source-dirs: src
  build-depends:
    algebraic-graphs >=0.6 && <0.9,
    base >=4.14 && <5,
    bytestring >=0.11.3 && <0.13,
    chart-svg >=0.6 && <0.9,
    containers >=0.8 && <0.9,
    flatparse >=0.3.5 && <0.6,
    numhask-space >=0.10 && <0.14,
    optics-core >=0.4 && <0.5,
    process-extras >=0.7.4 && <0.8,
    string-interpolate >=0.3 && <0.4,
    template-haskell >=2.16 && <2.25,
    text >=1.2 && <2.2,
    these >=1.1 && <1.3,

  exposed-modules:
    DotParse
    DotParse.Examples
    DotParse.Examples.AST
    DotParse.Examples.NumHask
    DotParse.FlatParse
    DotParse.FlatParse.TH
    DotParse.Types
    
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

